# tsgemm

./: .clang-format  CMakeLists.txt  LICENSE  README.md  accumulate.hpp  mpi_future.cpp  mpi_future.hpp  mpi_utils.hpp  sum_global.hpp  v1.cpp  v2.cpp  v3.cpp
apps/: CMakeLists.txt  v1.cpp  v2.cpp  v3.cpp
scripts/: CMakeLists.txt  build.sh  env.sh  genjobs.py  genjobs.sh  tsgemm-bench.sh.in
scripts/daint/: cmd.sh.templ  env.sh  job.sh.templ
scripts/daint_mc/: cmd.sh.templ  env.sh  job.sh.templ
scripts/laptop/: env.sh
src/tsgemm/: CMakeLists.txt  gemm.cpp  gemm.hpp  geometry.cpp  geometry.hpp  input.cpp  input.hpp  mpi_utils.cpp  mpi_utils.hpp  sum_global.hpp
